Add new latancy level setting to replace segment settings
